# als

./: .gitignore  Cargo.toml  README.md  test_roundtrip.sh
.kiro/specs/als-compression/: design.md  requirements.md  tasks.md
.kiro/steering/: cargo-versions.md
app/cli/: Cargo.toml
app/cli/src/: main.rs
app/lib/: C_FFI_README.md  Cargo.toml  README.md  pyproject.toml  python_bindings_README.md
app/lib/examples/: Makefile  analyze_windows_compression.rs  async_usage.rs  c_example  c_example.c  compress_windows_log.rs  csv_benchmark.rs  log_benchmark.rs  log_benchmark_comprehensive.rs  log_compression.rs  openssh_compression.rs  python_example.py  verify_windows_compression.rs
app/lib/include/: als.h
app/lib/src/: config.rs  error.rs  ffi.rs  lib.rs  python.rs  streaming.rs
app/lib/src/als/: document.rs  escape.rs  mod.rs  operator.rs  parser.rs  serializer.rs  tokenizer.rs
app/lib/src/compress/: compressor.rs  dictionary.rs  mod.rs  stats.rs
app/lib/src/convert/: csv.rs  json.rs  log_compress.rs  mod.rs  syslog.rs  syslog_optimized.rs  tabular.rs
app/lib/src/hashmap/: adaptive.rs  mod.rs
app/lib/src/pattern/: combined.rs  detector.rs  mod.rs  range.rs  repeat.rs  toggle.rs
app/lib/src/simd/: avx2.rs  avx512.rs  dispatcher.rs  mod.rs  neon.rs  scalar.rs
app/lib/tests/: async_integration.rs  csv_integration.rs  float_test.rs  json_integration.rs  streaming_integration.rs  unicode_test.rs
