[package]
name = "als-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for ALS compression library"
keywords = ["compression", "csv", "json", "cli", "data"]
categories = ["compression", "command-line-utilities"]

[[bin]]
name = "als"
path = "src/main.rs"

[dependencies]
# ALS compression library
als-compression = { path = "../lib" }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "wrap_help"] }

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Progress bar
indicatif = "0.17"

# Async runtime for async operations
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "fs", "io-util"] }

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.23"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
