[package]
name = "als-compression"
version = "0.0.1"
edition = "2021"
authors = ["ALS Compression Team"]
description = "Adaptive Logic Stream (ALS) compression library for structured data"
license = "Apache-2.0"
repository = "https://github.com/example/als-compression"
keywords = ["compression", "csv", "json", "simd", "data"]
categories = ["compression", "encoding", "parsing"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.4"
rkyv = "0.8"

# Concurrency
dashmap = "6.1"
rayon = "1.11"
parking_lot = "0.12"

# Error handling
thiserror = "2.0"

# Python bindings (optional)
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }

# Async runtime (not for WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "time"], optional = true }

# WASM bindings (optional)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
proptest = "1.9"
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.23"

[features]
default = ["simd", "parallel"]
simd = []
parallel = []
python = ["pyo3"]
ffi = []
wasm = ["wasm-bindgen", "js-sys"]
async = ["tokio"]

[profile.release]
opt-level = 3           # Maximum optimization
lto = "fat"             # Full link-time optimization
codegen-units = 1       # Better optimization, slower compile
strip = true            # Strip symbols for smaller binary
panic = "abort"         # Smaller binary, no unwinding
