[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "als-compression"
version = "0.0.1"
description = "Adaptive Logic Stream (ALS) compression library for structured data"
readme = "python_bindings_README.md"
requires-python = ">=3.7"
license = { text = "Apache-2.0" }
keywords = ["compression", "csv", "json", "data", "pandas", "numpy"]
authors = [
    { name = "ALS Compression Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Compression",
]

[project.optional-dependencies]
pandas = ["pandas>=1.0"]
numpy = ["numpy>=1.19"]
all = ["pandas>=1.0", "numpy>=1.19"]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "als_compression"
